--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["setuptools"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project]
 name = "sansa"
@@ -52,3 +52,10 @@ mkl = ["sparse_dot_mkl"]
 dev = ["black", "isort"]
 demo = ["jupyter", "matplotlib", "pandas", "pyarrow", "ipyplot", "scikit-learn"]
 
+[tool.hatch.build.targets.sdist]
+exclude = [
+  "/examples/datasets",
+]
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/sansa"]
